[tool.poetry]
name = "opt-study-2020"
version = "0.0.1"
description = "最適化勉強会"
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ortoolpy = "^0.2.34"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
